# Audiom

./: .gitignore  Cargo.toml
crates/tests/: Cargo.toml
crates/tests/src/: main.rs
crates/tests/src/test_api/: mod.rs  test_auth.rs  test_projects.rs  test_workspace.rs
crates/voxora-ai/: Cargo.toml
crates/voxora-api/: Cargo.toml
crates/voxora-api/src/: main.rs
crates/voxora-api/src/controllers/: auth.rs  mod.rs  projects.rs  rooms.rs  sessions.rs  workspaces.rs
crates/voxora-api/src/extractors/: mod.rs  workspace_extractors.rs
crates/voxora-api/src/middleware/: cors.rs  jwt_auth.rs  mod.rs
crates/voxora-core/: Cargo.toml
crates/voxora-core/src/: lib.rs
crates/voxora-core/src/auth/: jwt.rs
crates/voxora-db/: Cargo.toml
crates/voxora-db/src/: lib.rs  pool.rs
crates/voxora-db/src/queries/: mod.rs  projects.rs  rooms.rs  sessions.rs  users.rs  workspaces.rs
crates/voxora-signal/: Cargo.toml
crates/voxora-signal/src/: main.rs
crates/voxora-storage/: Cargo.toml
crates/voxora-worker/: Cargo.toml
crates/voxora-worker/src/: main.rs
migrations/: 0001_create_users.down.sql  0001_create_users.up.sql  0002_create_workspaces.down.sql  0002_create_workspaces.up.sql  0003_create_workspace_members.down.sql  0003_create_workspace_members.up.sql  0004_create_projects.down.sql  0004_create_projects.up.sql  0005_create_rooms.down.sql  0005_create_rooms.up.sql  0006_create_sessions.down.sql  0006_create_sessions.up.sql  0007_create_tracks.down.sql  0007_create_tracks.up.sql  0008_create_transcripts.down.sql  0008_create_transcripts.up.sql  0009_create_audit_logs.down.sql  0009_create_audit_logs.up.sql  0010_create_episodes.down.sql  0010_create_episodes.up.sql  0011_create_webhook_endpoints.down.sql  0011_create_webhook_endpoints.up.sql  0012_create_webhook_deliveries.down.sql  0012_create_webhook_deliveries.up.sql  0013_create_identity_providers.down.sql  0013_create_identity_providers.up.sql  0014_create_analytics_events.down.sql  0014_create_analytics_events.up.sql
