[package]
name    = "voxora-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
argon2      = { workspace = true }
jsonwebtoken = { workspace = true }
config      = { workspace = true }
anyhow      = { workspace = true }
db_services = { path = "../voxora-db" }
