[package]
name    = "voxora-signal"
version.workspace = true
edition.workspace = true

[[bin]]
name = "voxora-signal"
path = "src/main.rs"

[dependencies]
voxora-core = { path = "../voxora-core" }
voxora-db   = { path = "../voxora-db" }
actix-web   = { workspace = true }
actix-ws    = { workspace = true }
fred        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
